--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1 {
   text-align: center;
 }
 body {
-  background-color: black;
+  background-color: pink;
 }
 .class-example-1 {
     color: blue;
